--- a/book/web/pages/user/regist.html
+++ b/book/web/pages/user/regist.html
@@ -3,8 +3,14 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>尚硅谷会员注册页面</title>
-		<link type="text/css" rel="stylesheet" href="../../static/css/style.css" >
-		<script type="text/javascript" src="../../static/script/jquery-1.7.2.js"></script>
+		<!--
+			1、base一般写在title下面
+			2、写base标签，永远固定相对路径跳转的结果
+			3、写base路径，一般都要修改静态资源的路径，因为base路径是相对于web工程的路径
+		-->
+		<base href="http://localhost:8080/book/">
+		<link type="text/css" rel="stylesheet" href="static/css/style.css" >
+		<script type="text/javascript" src="static/script/jquery-1.7.2.js"></script>
 		<script type="text/javascript">
 			// 页面加载完成之后
 			$(function () {
@@ -93,7 +99,7 @@
 	</head>
 	<body>
 		<div id="login_header">
-			<img class="logo_img" alt="" src="../../static/img/logo.gif" >
+			<img class="logo_img" alt="" src="static/img/logo.gif" >
 		</div>
 
 			<div class="login_banner">
@@ -110,7 +116,7 @@
 								<span class="errorMsg"></span>
 							</div>
 							<div class="form">
-								<form action="http://localhost:8080">
+								<form action="registerServlet" method="POST">
 									<label>用户名称：</label>
 									<input class="itxt" type="text" placeholder="请输入用户名"
 										   autocomplete="off" tabindex="1" name="username" id="username" />
@@ -132,8 +138,8 @@
 									<br />
 									<br />
 									<label>验证码：</label>
-									<input class="itxt" type="text" style="width: 150px;" id="code"/>
-									<img alt="" src="../../static/img/code.bmp" style="float: right; margin-right: 40px">
+									<input class="itxt" name="code" type="text" style="width: 150px;" id="code"/>
+									<img alt="" src="static/img/code.bmp" style="float: right; margin-right: 40px">
 									<br />
 									<br />
 									<input type="submit" value="注册" id="sub_btn" />
